--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
-    <script src="main.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <hr/>
+    <h1>Pig Latin Translator</h1>
+    <hr />
     <div id="display-element"></div>
-    <form>
-      <input id="user-input" type="text">
+    <form id="main-form">
+      <input type="text" id="user-input" />
       <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
-    </form>  
-    <hr/>
+      <button type="submit">Translate</button>
+    </form>
+    <hr />
+    <h1>Pig Word:</h1>
+    <div id="translation"></div>
+    <script src="./index.js"></script>
   </body>
 </html>
